fixed/changed flexbox alignments - also changed button style

--- a/style.css
+++ b/style.css
@@ -57,10 +57,16 @@ body {
     }
 
     .sgn-up {
+        background-color: #3882f6;
         margin-top: 10px;
         padding: 8px;
+        padding-left: 16px;
+        padding-right: 16px;
         text-align: center;
+        border: 0px;
         border-radius: 15px;
+        border-style: solid;
+        color: white;
     }
 
     .content-right {
@@ -86,27 +92,29 @@ body {
     padding-bottom: 5px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    gap: 10px;
+    justify-content: center;
+    gap: 50px;
     align-self: stretch;
 }
 
 .img-placeholder {
     width: 50px;
-    padding: 100px;
+    padding: 75px;
     display: inline-flex;
-    border: 5px solid black;
+    border: 2.5px solid #3882f6;
+    border-radius: 15px;
 }
 
 .img-descriptions {
     padding: 50px;
     padding-top: 5px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
     align-self: stretch;
 }
 
 .img-subtext {
-    width: 200px;
+    width: 150px;
     text-align: center;
 }
